update '#' in code

--- a/code.ipynb
+++ b/code.ipynb
@@ -145,7 +145,7 @@
     "    if results.face_landmarks:\n",
     "        mp_drawing.draw_landmarks(image, results.face_landmarks, mp.solutions.face_mesh.FACEMESH_CONTOURS)\n",
     "    \n",
-    "    # Draw pose landmarks\n",
+    "    ## Draw pose landmarks\n",
     "    if results.pose_landmarks:\n",
     "        mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_holistic.POSE_CONNECTIONS)\n",
     "    \n",
